add basic layout styling & dark mode support

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <title>Alasdair's Blog</title>
+
   <link data-trunk rel="copy-file" href="./src/articles/one_of.md">
+  <link data-trunk rel="css" href="./src/main.css">
 </head>
 
 <body>
